--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+/*@import "../node_modules/prismjs/themes/prism.css";*/
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import url("./assets/iconfont/material-icons.css");
+@import url("./assets/iconfont/iconfont.css");
+
+html,body {
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    overflow: hidden;
+}
