--- a/src/app/test-tree/test-tree.component.html
+++ b/src/app/test-tree/test-tree.component.html
@@ -1,14 +1,17 @@
 <p>
     test-tree works!
 </p>
-
+<button mat-button color="accent" (click)="run()">runDriver</button>
 <button mat-button color="accent" (click)="runTest()">run</button>
 <button mat-button color="accent" (click)="stopTest()">stop</button>
 <button mat-button color="accent" (click)="rerunTest()">rerun</button>
 
-<button mat-button color="warn" (click)="runFind()">test</button>
+<button mat-button color="warn" (click)="testAll()">test</button>
 
 <button mat-button color="red" (click)="reloadPage()">reload</button>
+
+<button mat-button color="#9999ff" (click)="runSingle()">single</button>
+
 
 <div>
     <label for="in-name">By.name</label>
@@ -22,6 +25,3 @@
     <button mat-button color="warn" (click)="xpathFind(pathInput.value)" value="html/body/app-root">find</button>
 </div>
 
-<div>
-    <button mat-button color="#9999ff" (click)="runSingle()">single</button>
-</div>
